--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.3",
     "express": "^4.18.2",
+    "firebase": "^10.10.0",
+    "ngx-doc-viewer": "^15.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "signature_pad": "^4.2.0",
