--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.3",
     "express": "^4.18.2",
+    "@netlify/angular-runtime": "^2.0.6",
+    "axios": "^1.6.7",
+    "docx": "^8.5.0",
     "firebase": "^10.10.0",
     "ngx-doc-viewer": "^15.0.1",
     "rxjs": "~7.8.0",
