--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reubr-1",
+  "name": "reubr",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,7 +18,7 @@
     "@angular/core": "^17.2.0",
     "@angular/fire": "^17.1.0",
     "@angular/forms": "^17.2.0",
-    "@angular/material": "^17.3.9",
+    "@angular/material": "^17.3.2",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/platform-server": "^17.2.0",
