--- a/package.json
+++ b/package.json
@@ -1,46 +1,43 @@
 {
-  "name": "reubr",
+  "name": "reurb",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:reubr_1": "node dist/reubr_1/server/server.mjs"
+    "build": "NODE_OPTIONS=--max-old-space-size=4096 ng build",
+    "watch": "NODE_OPTIONS=--max-old-space-size=4096 ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.0",
-    "@angular/cdk": "17.3.2",
+    "@angular/cdk": "17.2.0",
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
-    "@angular/fire": "^17.1.0",
+    "@angular/fire": "^17.0.1",
+    "@angular/flex-layout": "15.0.0-beta.42",
     "@angular/forms": "^17.2.0",
-    "@angular/material": "^17.3.2",
+    "@angular/material": "^17.2.0",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
-    "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
-    "@angular/ssr": "^17.2.3",
+    "@netlify/angular-runtime": "^2.0.6",
     "axios": "^1.6.7",
     "docx": "^8.5.0",
-    "express": "^4.18.2",
     "firebase": "^10.10.0",
     "ngx-doc-viewer": "^15.0.1",
     "rxjs": "~7.8.0",
     "signature_pad": "^4.2.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.2.3",
-    "@angular/cli": "^17.2.3",
+    "@angular-devkit/build-angular": "^17.2.0",
+    "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
-    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
     "@types/signature_pad": "^2.3.6",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
