--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@ngrx/store": "^18.0.2",
     "axios": "^1.6.7",
     "docx": "^8.5.0",
+    "file-saver": "^2.0.5",
     "firebase": "^10.10.0",
+    "jspdf": "^2.5.2",
+    "jszip": "^3.10.1",
     "ngx-doc-viewer": "^15.0.1",
     "rxjs": "~7.8.0",
     "signature_pad": "^4.2.0",
