--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "docx": "^8.5.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.10.0",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "jszip": "^3.10.1",
     "ngx-doc-viewer": "^15.0.1",
@@ -41,6 +42,7 @@
     "@angular-devkit/build-angular": "^17.2.0",
     "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "@types/signature_pad": "^2.3.6",
     "jasmine-core": "~5.1.0",
